# capty

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: code-review-2026-04-13.md  notarization-setup.md
docs/superpowers/exports/: 2026-04-21-capty-speaker-diarization-discussion.md
docs/superpowers/plans/: 2026-03-30-llm-multi-model.md  2026-03-31-sidecar-engine-pool.md  2026-04-13-playwright-e2e-smoke-tests.md  2026-04-13-refactor-ipc-handlers.md  2026-04-18-sidecar-packaging-refactor.md  2026-04-19-sidecar-speaker-diarization.md  (+2 more)
resources/: models.json  recommended-models.json  recommended-tts-models.json
scripts/: test-fresh.sh
sidecar/: build.sh  capty-sidecar.spec  pyproject.toml
sidecar/capty_sidecar/: __init__.py  engine.py  engine_pool.py  main.py  mlx_executor.py  model_registry.py  model_runner.py  server.py  tts_runner.py  wechat_channels.py
sidecar/hooks/: rthook_certifi.py
sidecar/tests/: test_engine_pool.py  test_model_registry.py  test_model_runner.py  test_server.py  test_split_sentences.py  test_wechat_channels.py
src/main/: audio-files.ts  config.ts  database.ts  export.ts  index.ts  ipc-handlers.ts  model-downloader.ts  sidecar.ts
src/preload/: index.ts
src/renderer/: App.tsx  global.d.ts  index.html  main.tsx
tests/: README.md
tests/e2e/: README.md  fixtures.ts  helpers.ts  mock-llm-server.ts  tsconfig.json
tests/main/: audio-files.test.ts  config.test.ts  database.test.ts  export.test.ts  index.test.ts  ipc-handlers.test.ts  sidecar.test.ts  wechat-downloader.test.ts  wechat-isaac.test.ts  wechat-resolver.test.ts  wechat-yuanbao.test.ts  youtube-auth.test.ts
tests/preload/: index.test.ts
tests/renderer/: debounce.test.ts  natural-sort.test.ts  setup.ts  silero-load.test.ts  silero.test.ts  summary-session-switch.test.ts  useVAD.test.ts  vitest-ort-setup.ts
(+114 files in other folders)
