[project]
name = "capty-sidecar"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.9",
    "mlx-audio[stt]>=0.4.0",
    "numpy>=1.24",
    "misaki>=0.7.0",
    "num2words>=0.5.14",
    "phonemizer>=3.3.0",
    "spacy>=3.7",
    "pypinyin>=0.53",
    "ordered-set>=4.1",
    "jieba>=0.42",
    "cn2an>=0.5",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[project.scripts]
capty-sidecar = "capty_sidecar.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["capty_sidecar*"]
